--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -10,3 +10,5 @@ jobs:
       with:
         name: kutyel
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+    - name: Build
+      run: nix-build default.nix
